Add uuid-based client search with constant execution time